--- a/.github/workflows/test-runs.yml
+++ b/.github/workflows/test-runs.yml
@@ -24,9 +24,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      
+
       - name: Install Playwright Browsers
         run: |
           playwright install --with-deps
+
+      - name: Add project root to PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+        
 
       - name: Run tests
         run: |
