--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,15 @@
 [pytest]
-testpaths = TrainingPortal/tests
-pythonpath = TrainingPortal
+DJANGO_SETTINGS_MODULE = TrainingPortal.settings
+python_files = tests.py test_*.py *_tests.py
+testpaths = tests
+asyncio_mode = off
+#asyncio_mode = auto
+; pythonpath = .
+; ; asyncio_mode = auto
+; ; asyncio_default_fixture_loop_scope = session
+; DJANGO_SETTINGS_MODULE = TrainingPortal.settings
+; python_files = tests.py test_*.py *_tests.py
+
 
 
 
